[gd_scene load_steps=4 format=3 uid="uid://5cixgh4i3vre"]

[ext_resource type="Script" path="res://environment/pose_capture_room.gd" id="1_j4ive"]
[ext_resource type="PackedScene" uid="uid://njx823gyk04n" path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_hand.tscn" id="2_30saj"]
[ext_resource type="PackedScene" uid="uid://raeeicvvindd" path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_hand.tscn" id="3_id631"]

[node name="PoseCaptureRoom" type="Node3D"]
script = ExtResource("1_j4ive")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
visible = false

[node name="Left" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.037303, 0, 0)
tracker = &"left_hand"

[node name="LeftHand" parent="XROrigin3D/Left" instance=ExtResource("2_30saj")]

[node name="Right" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0459409, 0, 0)
tracker = &"right_hand"

[node name="RightHand" parent="XROrigin3D/Right" instance=ExtResource("3_id631")]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.17401)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.06
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
